暂时先不使用annotation实现，简单地以动态代理实现

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     compile project(':rasync-annotations')
-    annotationProcessor project(':rasync-compiler')
+//    annotationProcessor project(':rasync-compiler')
 }
